--- a/ffs2222/dev notes.plist
+++ b/ffs2222/dev notes.plist
@@ -32,6 +32,8 @@
 	<string></string>
 	<key>challenge and cheat mode -- show icons next to hiscores</key>
 	<string></string>
+	<key>reset session button?</key>
+	<string></string>
 	<key>  </key>
 	<string></string>
 	<key>TODO</key>
