--- a/ffs2222/dev notes.plist
+++ b/ffs2222/dev notes.plist
@@ -74,5 +74,9 @@
 	<string></string>
 	<key>hardcoded numbers to %screen</key>
 	<string></string>
+	<key>ipad: pause leftright border</key>
+	<string></string>
+	<key>mainmenu says playagain</key>
+	<string></string>
 </dict>
 </plist>
