fixed score and difficulty bug

--- a/ffs2222/dev notes.plist
+++ b/ffs2222/dev notes.plist
@@ -36,6 +36,8 @@
 	<string></string>
 	<key>single space mode?</key>
 	<string></string>
+	<key>difficulty changes on fly as you move</key>
+	<string></string>
 	<key>  </key>
 	<string></string>
 	<key>TODO</key>
